@@ -6,7 +6,7 @@
 jQuery.noConflict(); // @see http://docs.jquery.com/Using_jQuery_with_Other_Libraries/
 jQuery(document).ready(function($){
 	// INDI
-	$("#spouseid, input[id*=pid], input[id^=gedcomid], input[id^=rootid], input[id$=ROOT_ID], input[name^=FATHER], input[name^=MOTHER], input[name^=CHIL]").autocomplete("autocomplete.php", {
+	$("#spouseid, input[id*=pid], input[id*=PID], input[id^=gedcomid], input[id^=rootid], input[id$=ROOT_ID], input[name^=FATHER], input[name^=MOTHER], input[name^=CHIL]").autocomplete("autocomplete.php", {
 		extraParams: {field:'INDI'},
 		formatItem: function(row, i) {
 			return row[0] + " (" + row[1] + ")";
@@ -140,7 +140,7 @@ jQuery(document).ready(function($){
 		minChars: 2
 	});
 	// PLAC : full [City, County, State/Province, Country]
-	$(".PLAC, #place, input[id=place], input[name^=PLAC], input[name$=PLAC]").autocomplete("autocomplete.php", {
+	$(".PLAC, #place, input[id=place], input[name*=PLAC], input[name^=PLAC], input[name$=PLAC]").autocomplete("autocomplete.php", {
 		extraParams: {field:'PLAC'},
 		width: 400,
 		minChars: 2
